@@ -42,6 +42,7 @@ Version 1.3.8+svn:
       * Meteor Lake to Fallenstar Lake
       * Triple Blitz to Alirok Marsh
     * Minimum number of turns reduced to 1.
+    * Fixed a crash if the client recieves invalid utf-8.
 
   * Unit changes and balancing
     * Created undead variations for the 'bat' and 'gryphon' race.
